# synology-telegram-bot

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: docker-build.yml  docker-image.yml
src/: main.rs  synology.rs
