[package]
name = "synology-telegram-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"